# Vision

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
1-spec/: CLAUDE.spec.md  stakeholders.md
1-spec/assumptions/: ASM-channel-shape-convergeable.md  ASM-confidence-scores-are-meaningful.md  ASM-derived-artifacts-gdpr-permissible.md  ASM-in-session-learning-feasible.md  ASM-no-scalability-target.md  ASM-rtbf-24h-window-acceptable.md  ASM-subject-reference-resolvable.md  ASM-vps-docker-baseline-stable.md
1-spec/constraints/: CON-confidence-gated-autonomy.md  CON-consent-required.md  CON-gbrain-no-raw-private-truth.md  CON-gdpr-applies.md  CON-human-correction-priority.md  CON-local-first-inference.md  CON-no-direct-agent-writes.md  CON-no-platform-bypass.md  CON-tiered-retention.md  CON-vps-portable-deployment.md
1-spec/goals/: GOAL-auditable-consent-and-privacy.md  GOAL-durable-project-memory.md  GOAL-local-portable-deployment.md  GOAL-multi-source-project-ingestion.md  GOAL-trustworthy-supervised-agent.md
1-spec/requirements/: REQ-COMP-consent-record.md  REQ-COMP-data-export.md  REQ-COMP-purpose-limitation.md  REQ-COMP-rtbf.md  REQ-F-artifact-extraction.md  REQ-F-bidirectional-links.md  REQ-F-brain-first-lookup.md  REQ-F-confidence-gate.md  REQ-F-consent-revocation.md  REQ-F-correction-actions.md  REQ-F-decision-inspection.md  REQ-F-duplicate-detection.md  REQ-F-gbrain-schema.md  REQ-F-input-event-normalization.md  REQ-F-learning-loop.md  REQ-F-project-routing.md  REQ-F-proposal-pipeline.md  REQ-F-retention-sweep.md  REQ-F-review-queue.md  REQ-F-source-registration.md  REQ-F-state-reconstruction.md  REQ-MNT-env-driven-config.md  REQ-MNT-vault-audit-sweep.md  REQ-PERF-ingest-latency.md  REQ-PERF-routing-throughput.md  REQ-PORT-vps-deploy.md  REQ-REL-audit-reconciliation.md  REQ-REL-backup-restore-fidelity.md  REQ-REL-event-replay-correctness.md  REQ-REL-secret-rotation.md  REQ-SEC-audit-log.md  REQ-SEC-redaction-precondition.md  REQ-SEC-remote-inference-audit.md  REQ-USA-kanban-obsidian-fidelity.md  REQ-USA-paginated-lists.md
1-spec/user-stories/: US-backup-restore-cycle.md  US-browse-project-memory.md  US-fresh-vps-install.md  US-handle-review-required-input.md  US-ingest-from-any-channel.md  US-inspect-agent-decision.md  US-register-source-with-consent.md  (+6 more)
2-design/: CLAUDE.design.md  api-design.md  architecture.md  data-model.md
3-code/: CLAUDE.code.md  tasks.md
3-code/_common/canonical_json/: README.md  pyproject.toml
3-code/_common/canonical_json/canonical_json/: __init__.py
3-code/_common/canonical_json/tests/: test_canonical_json.py
3-code/backlog-core/: .gitignore  CLAUDE.component.md  Dockerfile  README.md  pyproject.toml
3-code/backlog-core/app/: __init__.py  audit.py  db.py  events.py  idempotency.py  main.py  migrations.py  sources.py
3-code/backlog-core/migrations/: 0001_create-events-table.sql  0002_create-consent-tables.sql  0003_fix-consent-scope-check-null-handling.sql  0003_idempotency_store.sql
3-code/backlog-core/tests/: conftest.py  test_audit_endpoints.py  test_audit_logic.py  test_consent_schema.py  test_db.py  test_events.py  test_events_schema.py  test_health.py  test_idempotency.py  test_inputs_api.py  test_migrations.py  test_source_endpoints.py  test_sources.py
3-code/cli/: .dockerignore  CLAUDE.component.md  Dockerfile  README.md  pyproject.toml
3-code/cli/app/: __init__.py  config.py  health.py  main.py
3-code/cli/tests/: test_config.py  test_health.py
3-code/gbrain-bridge/: .dockerignore  CLAUDE.component.md  Dockerfile  README.md  pyproject.toml
3-code/gbrain-bridge/app/: __init__.py  main.py  vault.py
3-code/gbrain-bridge/tests/: test_context.py  test_health.py  test_vault.py
3-code/hermes-runtime/: CLAUDE.component.md  Dockerfile  README.md  pyproject.toml
3-code/hermes-runtime/app/: __init__.py  main.py  ollama_client.py  orchestration.py
3-code/hermes-runtime/app/skills/: extraction.py
3-code/hermes-runtime/tests/: test_extraction.py  test_health.py  test_ollama_client.py  test_process_now.py
3-code/kanban-sync/: CLAUDE.component.md  Dockerfile  README.md  pyproject.toml
3-code/kanban-sync/app/: __init__.py  board.py  kanban.py  main.py  models.py  review.py  sync.py
3-code/kanban-sync/tests/: test_api.py  test_board.py  test_concurrency.py  test_health.py  test_kanban.py  test_models.py  test_storage.py
3-code/whatsorga-ingest/: CLAUDE.component.md  Dockerfile  README.md  pyproject.toml
3-code/whatsorga-ingest/app/: __init__.py  main.py
3-code/whatsorga-ingest/tests/: test_health.py  test_ingest_manual.py
4-deploy/: CLAUDE.deploy.md
decisions/: DEC-api-versioning.history.md  DEC-api-versioning.md  DEC-backend-stack-python-fastapi.history.md  DEC-backend-stack-python-fastapi.md  DEC-cli-stack-python-typer.history.md  DEC-cli-stack-python-typer.md  DEC-confidence-gate-as-middleware.history.md  DEC-confidence-gate-as-middleware.md  DEC-cursor-pagination-and-event-stream-conventions.history.md  DEC-cursor-pagination-and-event-stream-conventions.md  DEC-direct-http-between-services.history.md  DEC-direct-http-between-services.md  DEC-gdpr-legal-review-deferred.history.md  DEC-gdpr-legal-review-deferred.md  DEC-hash-chain-over-payload-hash.history.md  DEC-hash-chain-over-payload-hash.md  DEC-idempotency-keys.history.md  DEC-idempotency-keys.md  DEC-obsidian-as-review-ui.history.md  DEC-obsidian-as-review-ui.md  DEC-platform-bypass-review-checklist.history.md  DEC-platform-bypass-review-checklist.md  DEC-postgres-as-event-store.history.md  DEC-postgres-as-event-store.md  DEC-postgres-migration-tool.history.md  DEC-postgres-migration-tool.md  DEC-service-auth-bearer-tokens.history.md  DEC-service-auth-bearer-tokens.md  DEC-shared-utility-path-deps.history.md  DEC-shared-utility-path-deps.md  DEC-stakeholder-tiebreaker-consensus.history.md  DEC-stakeholder-tiebreaker-consensus.md
docs/: implementation-analysis.md
scripts/: check-env-drift.sh  install_vps.sh  ollama-pull.sh  ollama.sh  psql.sh  smoke_test.sh
(+49 files in other folders)
